# homie

./: .gitignore  Cargo.toml  Makefile  README.md  demo_improved_query.sql  initialise_db_example.sh
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  tsconfig.json.license  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  index.tsx  resources.ts  translations.spec.ts  translations.ts  types.ts
frontend/src/components/: LoginModal.module.css  LoginModal.tsx  SortAndFilter.tsx  Task.module.css  Task.tsx  TaskDoneModal.tsx  TaskList.module.css  TaskList.tsx
frontend/src/design/: Button.module.css  Button.tsx  Error.module.css  Error.tsx  FlexGap.module.css  FlexGap.tsx  Form.module.css  Form.tsx  Header.module.css  Header.tsx  IconButton.module.css  IconButton.tsx  InputRow.module.css  InputRow.tsx  Modal.module.css  Modal.tsx  _atoms.css  _atoms.module.css
frontend/src/stores/: formatting.ts  useAuth.tsx
migrations/: 0001_create_user_tables.sql  0002_create_task_tables.sql
scripts/: .gitignore  homie.service  initialise_db_example.sh
src/: auth.rs  db.rs  lib.rs  main.rs  static_files.rs  tasks.rs  translations.rs
src/auth/: store.rs  types.rs
src/tasks/: insert_completion.sql  insert_new_task.sql  insert_new_task_first_completion.sql  insert_new_task_name.sql  insert_new_task_participant.sql  mod.rs  routes.rs  select_all_tasks.sql  select_one_task.sql  store.rs  time.rs  types.rs
tests/: test_auth.rs  test_tasks.rs
tests/common/: mod.rs
(+2 files in other folders)
