[package]
name = "homie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
axum = "0.6.1"
axum-macros = "0.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
heapless = { version = "0.7.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.5.10"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.3.0"

[features]
